# flipboard

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  release.sh  setup.py
.github/workflows/: publish.yml  test.yml
flipboard/: __version__.py  cli.py
tests/: test_flipboard.py
