[project]
name = "flipboard"
version = "0.3.0"
description = "Apply transformations to text on the clipboard"
authors = [{name = "chris48s"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyperclip >=1.8.2",
    "click >=8.3.3",
    "xmlformatter >=0.2.3",
]

[tool.poetry.group.dev.dependencies]
isort = "==8.0.1"
flake8 = "==7.3.0"
black = "==26.3.1"
pytest = "==9.0.3"
pytest-cov = "==7.1.0"

[project.urls]
Home = "https://github.com/chris48s/flipboard"
Source = "https://github.com/chris48s/flipboard"

[tool.poetry]
requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
flipboard = 'flipboard.cli:cli'
